--- a/templates/edit_faults.html
+++ b/templates/edit_faults.html
@@ -5,7 +5,7 @@
     <title>Edit Faults</title>
 </head>
 <body>
-<form method="post" action="/edit">
+<form method="post" action="/faults">
     <p>Enter data in this format:<br/>
         First Line: (fault width) (fault length)<br/>
 Each subsequent line, floats values for each subfault, with data in this order:<br/>
